NXT-3229: Code style, sonar
(NXT-3229 Some community nodes are not categorized in node repository's tree view)